--- a/qml.qrc
+++ b/qml.qrc
@@ -67,5 +67,7 @@
         <file>Images/b20.png</file>
         <file>Images/b50.png</file>
         <file>Images/b100.png</file>
+        <file>WORKS/WKS_Symetrie.qml</file>
+        <file>Sounds/exo_symetrie.wav</file>
     </qresource>
 </RCC>
