Start working on next iteration

--- a/qml.qrc
+++ b/qml.qrc
@@ -72,5 +72,12 @@
         <file>Sounds/oui2.wav</file>
         <file>Sounds/oui3.wav</file>
         <file>Sounds/oui4.wav</file>
+        <file>Images/Game_art/eau_bas.png</file>
+        <file>Images/Game_art/eau_haut.png</file>
+        <file>Images/Game_art/terre_bas.png</file>
+        <file>Images/Game_art/terre_haut.png</file>
+        <file>WORKS/WKS_Suivant.qml</file>
+        <file>Images/Game_art/player.png</file>
+        <file>Images/Game_art/stone.png</file>
     </qresource>
 </RCC>
