Start dev branch

--- a/qml.qrc
+++ b/qml.qrc
@@ -84,5 +84,6 @@
         <file>Sounds/exo_balance.wav</file>
         <file>Images/Game_art/rock.png</file>
         <file>Images/Game_art/cactus.png</file>
+        <file>Images/Game_art/bocal.png</file>
     </qresource>
 </RCC>
