--- a/qml.qrc
+++ b/qml.qrc
@@ -90,5 +90,6 @@
         <file>Images/Game_art/sand.png</file>
         <file>WORKS/WKS_Tetri_Chiffres.qml</file>
         <file>WIDGETS/WID_Number.qml</file>
+        <file>WORKS/WKS_Memory.qml</file>
     </qresource>
 </RCC>
