--- a/qml.qrc
+++ b/qml.qrc
@@ -92,5 +92,7 @@
         <file>WIDGETS/WID_Number.qml</file>
         <file>WORKS/WKS_Memory.qml</file>
         <file>Images/fd_carte.png</file>
+        <file>Sounds/exo_memory.wav</file>
+        <file>Sounds/exo_tetri.wav</file>
     </qresource>
 </RCC>
