--- a/qml.qrc
+++ b/qml.qrc
@@ -95,5 +95,6 @@
         <file>Sounds/exo_memory.wav</file>
         <file>Sounds/exo_tetri.wav</file>
         <file>Images/Background/fd1_jour.png</file>
+        <file>WORKS/WKS_Conversion.qml</file>
     </qresource>
 </RCC>
